tests/coverage/misc/fail/negative/truncation/004_function_body_eof.js
// Expected error: unterminated function body.
function parse(value) {
    return value;
